--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,7 @@
 name: Test action
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-
+  workflow_dispatch:
 jobs:
   main:
     runs-on: ubuntu-latest
