--- a/action.yml
+++ b/action.yml
@@ -9,12 +9,13 @@ inputs:
     description: Rubygems.org API key
     required: true
 runs:
-  using: composite
+  using: "composite"
   steps:
-    - run: |
-      echo $GITHUB_ACTION_PATH/main.rb
+    - run: echo $GITHUB_ACTION_PATH/main.rb
+      shell: sh
     - run: ruby -W0 $GITHUB_ACTION_PATH/main.rb
       shell: sh
     - run: ruby -v
+      shell: sh
       env:
         API_KEY: ${{inputs.api_key}}
